--- a/.github/workflows/deploy_to_server.yml
+++ b/.github/workflows/deploy_to_server.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ test/github-actions ]
 
 jobs:
   build:
@@ -30,5 +30,5 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        source: "./build"
-        target: "~/public_html/test/hiccup"
+        source: "build"
+        target: "/public_html/test/hiccup"
