--- a/.github/workflows/deploy_to_server.yml
+++ b/.github/workflows/deploy_to_server.yml
@@ -31,4 +31,4 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         source: "build"
-        target: "/public_html/test/hiccup"
+        target: "public_html/test/hiccup"
