--- a/.github/workflows/deploy_to_server.yml
+++ b/.github/workflows/deploy_to_server.yml
@@ -30,5 +30,5 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        source: "build"
+        source: "build/*"
         target: "public_html/test/hiccup"
