custom tidz tweaks

--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen       8899;
+    listen       __CUSTOM_PORT__;
     server_name  _;
 
     location / {
@@ -13,7 +13,7 @@ server {
     }
 
     location /config.json {
-        root   /usr/share/nginx/html;
         add_header Cache-Control "no-store, no-cache";
+        rewrite ^/(.*) __CONFIG_JSON_REWRITE_DIR__$1 last;
     }
 }
