--- a/default.conf
+++ b/default.conf
@@ -1,19 +1,60 @@
-server {
-    listen       __CUSTOM_PORT__;
-    server_name  _;
+user  nginx;
+worker_processes  4;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
+
+http {
+
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format scripts '$request_filename $document_root $fastcgi_script_name > $request';
+
+    rewrite_log on;
+
+    #proxy_cache_path  /tmp/nginx/cache  levels=1:2    keys_zone=MYCACHE:__MYCACHE_AGE__ inactive=24h  max_size=1g;
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+     #                 '$status $body_bytes_sent "$http_referer" '
+     #                 '"$http_user_agent" "$http_x_forwarded_for"';
+
+    #access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nginx/access.log  scripts;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  1m;
+
+    gzip  on;
+    gzip_disable "MSIE [1-6].(?!.*SV1)";
+
+
+    
+    server {
+        listen       __CUSTOM_PORT__;
+        server_name _;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+
+        # error_page   500 502 503 504  /50x.html;
+        # location = /50x.html {
+        #     root   /usr/share/nginx/html;
+        # }
+
+        location /config.json {
+            add_header Cache-Control "no-store, no-cache";
+            rewrite ^/(.*) __CONFIG_JSON_REWRITE_DIR__$1 last;
+        }
     }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
 
-    location /config.json {
-        add_header Cache-Control "no-store, no-cache";
-        rewrite ^/(.*) __CONFIG_JSON_REWRITE_DIR__$1 last;
-    }
+
 }
